--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  text-align: left;
 }
 
 .App-logo {
@@ -28,11 +28,26 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+.menu-header {
+  background-color: white;
+  min-height: 300;
+  display: flex;
+  /*flex-direction: column;*/
+  vertical-align: middle;
+  align-items: center;
+  justify-content: start;
+  font-size: calc(10px + 2vmin);
+  color: black;
+  
+}
+
+/*@keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
+}*/
+
+
