--- a/src/App.css
+++ b/src/App.css
@@ -2,16 +2,13 @@
   text-align: left;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
+
+/*@media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+}*/
 
 .App-header {
   background-color: #282c34;
@@ -28,18 +25,7 @@
   color: #61dafb;
 }
 
-.menu-header {
-  background-color: white;
-  min-height: 300;
-  display: flex;
-  /*flex-direction: column;*/
-  vertical-align: middle;
-  align-items: center;
-  justify-content: start;
-  font-size: calc(10px + 2vmin);
-  color: black;
-  
-}
+
 
 /*@keyframes App-logo-spin {
   from {
